[ #3313 ] Implement new command line flag `--html-highlight=[code,all]`, add `split` as a new dependency
Signed-off-by: ice1000 <ice1000kotlin@foxmail.com>

--- a/src/data/Agda.css
+++ b/src/data/Agda.css
@@ -1,5 +1,7 @@
 /* Aspects. */
 .Comment       { color: #B22222 }
+.Background    {}
+.Markup        { color: #000000 }
 .Keyword       { color: #CD6600 }
 .String        { color: #B22222 }
 .Number        { color: #A020F0 }
