[ #2452 ] More highlighting for and better typesetting of pragmas.

--- a/src/data/Agda.css
+++ b/src/data/Agda.css
@@ -7,6 +7,7 @@
 .Number        { color: #A020F0 }
 .Symbol        { color: #404040 }
 .PrimitiveType { color: #0000CD }
+.Pragma        { color: black   }
 .Operator      {}
 
 /* NameKinds. */
